Removed top <hr>
Also changed top margin for the whole footer to maintain uniformity/symmetry with the site name's distance to the orange border and the bottom <hr>.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -353,7 +353,7 @@ section li {
 /***** Footer content rules *****/
 footer {
     padding: 0 1.5rem;
-    margin: 2.75rem auto;
+    margin: 2rem auto auto;
     max-width: 60rem;
     /* ^^^ These three rules bring the footer close to how the main content is
     laid out. */
