--- a/assets/css/styles-grid.css
+++ b/assets/css/styles-grid.css
@@ -364,7 +364,7 @@ footer {
 }
 
 footer > div {
-    margin: 2rem auto;
+    margin: .5rem auto;
 }
 
 footer hr {
@@ -383,6 +383,7 @@ footer hr {
     float: right;
     font-size: 1em;
     font-family: 'Lato', sans-serif;
+    margin-bottom: 2rem;
 }
 
 /* For screens whose resolution width is 800px or greater */
