--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -301,6 +301,12 @@ section li {
     margin: 0 1rem;
 }
 
+.container picture img {
+    display: block;
+    width: 100%;
+    margin: 2rem auto;
+}
+
 .quote blockquote {
     font-size: 1.375rem;
 }
@@ -416,6 +422,11 @@ footer hr {
 
     .hero h2 {
         margin: 0 4rem;
+    }
+
+    .container picture img {
+        margin: 2rem 1rem;
+        width: 50%;
     }
 }
 
