--- a/assets/css/styles-grid.css
+++ b/assets/css/styles-grid.css
@@ -1,5 +1,6 @@
 :root {
     --nav-height: 5rem;
+    --main-content-width: 64rem;
 }
 
 *, *::before, *::after {
@@ -139,7 +140,7 @@ main {
 main > :not(.hero):not(.section-border) {
     margin: 1.125rem auto;
     padding: 0 2rem;
-    max-width: 64rem;
+    max-width: var(--main-content-width);
 }
 
 main > :first-child {
@@ -301,6 +302,12 @@ section li {
     margin: 0 1rem;
 }
 
+.container picture img {
+    display: block;
+    width: 100%;
+    margin: 2rem auto;
+}
+
 .quote blockquote {
     font-size: 1.375rem;
 }
@@ -416,6 +423,11 @@ footer hr {
 
     .hero h2 {
         margin: 0 4rem;
+    }
+
+    .container picture img {
+        margin: 2rem 1rem;
+        width: 50%;
     }
 }
 
