--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -82,6 +82,8 @@ nav {
     transform: translateX(calc((100% - var(--item-width)) / 2 ));
     line-height: 1.5rem;
     text-decoration: none;
+    color: black;
+    font-weight: 900;
 }
 /* Navbar overflows at 1175px. Later create media query to change styling at
 1180px or somewhere wider. */
