Arial font now default sans-serif font
Arial is pretty much the defacto sans-serif font; default sans-serif 
font now shouldn't be whatever is set as the default font-family on 
other operating systems.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@
 /***** Globals *****/
 * {
     line-height: 1.75rem;
-    font-family: sans-serif;
+    font-family: 'Arial', sans-serif;
 }
 
 div {
