--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -222,27 +222,26 @@ main > header[class] {
 
 .hero-text {
     display: inline-block;
-    /* font-size: 1.5em; */
     width: 100%;
     padding: 0 0 3.75rem;
     text-align: center;
+    color: #fffd;
 }
 
 .hero-text * {
     line-height: 2rem;
     margin: 2rem 1.5rem;
+    text-shadow: 2px 2px 5px #000;
 }
 
 .hero h2 {
     text-transform: uppercase;
     font-family: 'Verdana', sans-serif;
-    color: #ffc8a7;
 }
 
 .hero p {
     font-family: 'Open Sans', sans-serif;
     margin-top: -1em;
-    color: #efc3a6;
     font-weight: 600;
 }
 
