--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -314,7 +314,7 @@ section li {
     margin: 0 1rem;
 }
 
-.container picture img {
+section picture img {
     display: block;
     width: 100%;
     margin: 2rem auto;
@@ -438,10 +438,6 @@ footer hr {
         margin: 2em 4rem;
     }
 
-    .container picture img {
-        margin: 2rem 1rem;
-        width: 50%;
-    }
 }
 
 /*
