--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -156,8 +156,8 @@ main {
     font-weight: bold;
 }
 
-/* Selects all children of <main> that *aren't* .hero nor .section-border */
-main > :not(.hero):not(.section-border) {
+/* Selects all children of <main> that *aren't* .hero, .banner, nor .section-border */
+main > :not(.hero):not(.banner):not(.section-border) {
     margin: 1.125rem auto;
     padding: 0 2rem;
     max-width: var(--main-content-width);
@@ -176,27 +176,6 @@ main > header[class] {
 }
 
 /*** Banner/hero rules ***/
-.banner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* These three above centre all content at the exact middle of the X and Y axes */
-
-    flex-direction: column;
-    /* Any siblings under .banner will vertically stack rather than sit next to one another */
-
-    padding: 5.5em;
-    margin: auto;
-
-    /* background-image: url(https://electorials.com/uploads/1/0/1/7/101767294/background-images/944554335.png); */
-    /* This won't be implemented, as it's a sort of proof of concept.
-    The general markup will be this for all pages with the hero/banner section:
-    <div class="banner" style="background-image: url({{ page.banner-image }});"><h1>Page Title</h1></div>
-    {{ page.background-image }} will be defined in each page's front matter variables.
-    The background-image property in the style attribute might be something like this:
-    background-image: url(/assets/img/arduino/banners/{{ page.banner-image }})
-    Might have to use Modernizr.js for using WebP images as the background, while also using JPEG and PNG images on older browsers (https://css-tricks.com/using-webp-images/) */
-}
 
 .hero {
     --hero-height: 35rem;
@@ -248,6 +227,46 @@ main > header[class] {
     font-family: 'Open Sans', sans-serif;
     margin-top: -1em;
     font-weight: 600;
+}
+
+.banner {
+    --banner-height: 20rem;
+    width: 100vw;
+    margin: 0 0 3.125rem;
+    min-height: var(--banner-height);
+}
+
+.banner-image {
+    background: -webkit-linear-gradient(bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
+    var(--banner-image);
+    background: -o-linear-gradient(bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
+    var(--banner-image);
+    background: linear-gradient(to top, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
+    var(--banner-image);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    height: var(--banner-height);
+    margin: 0 auto;
+}
+
+.banner-text {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    color: #fffd;
+    top: 14rem;
+    transform: translate(0%,-100%);
+    text-shadow: 2px 2px 5px #000;
+}
+
+.banner-text h2 {
+    line-height: 2.25rem;
+    text-transform: uppercase;
+    font-family: 'Verdana', sans-serif;
+    font-size: 1.75rem;
+    margin: 0 1.5rem;
 }
 
 /*** Section rules ***/
@@ -438,6 +457,18 @@ footer hr {
         margin: 2em 4rem;
     }
 
+    .banner {
+        --banner-height: 28.125rem;
+    }
+
+    .banner-text {
+        transform: translate(0%,100%);
+    }
+
+    .banner-text h2 {
+        font-size: 2.125rem;
+        margin: 0 2.5rem;
+    }
 }
 
 /*
