Image size control for pages like the Project pages
Images stay nicely within the defined <section> width, while keeping 
them not too big when the viewport gets wide.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -335,8 +335,9 @@ section li {
 
 section picture img {
     display: block;
-    width: 100%;
-    margin: 2rem auto;
+    max-height: 35rem;
+    max-width: calc(100vw - 4.75rem);
+    /* Keeps images width within width of section */
 }
 
 .quote blockquote {
