Got rid of the blurry transition on banner images
`clip-path: inset(0);` essentially makes a non-blurry frame around the 
image.

It seems to affect the bottom edge only, but is good for what's needed 
at the moment.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -272,6 +272,11 @@ main > header[class] {
     margin: 0 1.5rem;
 }
 
+.hero-image,
+.banner-image {
+    clip-path: inset(0);
+}
+
 /*** Section rules ***/
 .section-border {
     height: .25rem;
