--- a/assets/css/styles-grid.css
+++ b/assets/css/styles-grid.css
@@ -230,6 +230,7 @@ main > header[class] {
 }
 
 .banner {
+    --banner-height: 14rem;
     width: 100vw;
     margin: 0 0 3.125rem;
     min-height: var(--banner-height);
@@ -247,6 +248,8 @@ main > header[class] {
     background-repeat: no-repeat;
     background-size: cover;
 
+    -webkit-filter: blur(2px);
+    filter: blur(2px);
 
     height: var(--banner-height);
     margin: 0 auto;
@@ -466,11 +469,9 @@ footer hr {
         margin: 2em 4rem;
     }
 
-    .container picture img {
-        margin: 2rem 1rem;
-        width: 50%;
+    .banner {
+        --banner-height: 19rem;
     }
-}
 
     .banner-text h2 {
         font-size: 2.125rem;
