--- a/_layouts/arduino.html
+++ b/_layouts/arduino.html
@@ -16,13 +16,13 @@
             /* Styling here to build upon normalize.css, and not undo normalize.css's margin declaration for h1. */
 
             .grid-container {
-                --item-count: {{ site.data.grid-items.product.item-count }};
+                --item-count: {{ site.data.grid-items.arduino.item-count }};
             }
 
             @media only screen and (min-width: 800px) {
                 .grid-container {
-                    --columns-for-items: {{ site.data.grid-items.product.columns-for-items }};
-                    --rows-for-items: {{ site.data.grid-items.product.rows-for-items }};
+                    --columns-for-items: {{ site.data.grid-items.arduino.columns-for-items }};
+                    --rows-for-items: {{ site.data.grid-items.arduino.rows-for-items }};
                 }
             }
         </style>
