--- a/assets/css/styles-grid.css
+++ b/assets/css/styles-grid.css
@@ -7,14 +7,14 @@
     box-sizing: border-box;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 /***** Globals *****/
 * {
     line-height: 1.75rem;
     font-family: 'Arial', sans-serif;
-}
-
-div {
-    margin: 2rem auto;
 }
 
 a {
@@ -32,10 +32,6 @@ main a:focus:not(.links a) {
 main a:hover:not(.links a),
 main a:focus:not(.links a) {
     text-decoration: #00e .125rem underline;
-}
-
-body {
-    overflow-x: hidden;
 }
 
 /***** Nav rules *****/
@@ -156,15 +152,11 @@ main {
     font-weight: bold;
 }
 
-/* Selects all children of <main> that *aren't* .hero, .banner, nor .section-border */
-main > :not(.hero):not(.banner):not(.section-border) {
-    margin: 1.125rem auto;
+/* Selects all children of <main> that *isn't* .banner */
+main > :not(.banner) {
+    margin: auto;
     padding: 0 2rem;
     max-width: var(--main-content-width);
-}
-
-main > :first-child {
-    margin-top: 3.125rem;
 }
 
 main > :last-child {
@@ -175,59 +167,7 @@ main > header[class] {
     margin-top: 0;
 }
 
-/*** Banner/hero rules ***/
-
-.hero {
-    --hero-height: 35rem;
-    width: 100vw;
-    margin: 0 0 3.125rem;
-    min-height: var(--hero-height);
-    /* Whole header can expand from minimum height of 35rem. Will never shrink below 35rem. */
-}
-
-.hero-image {
-    background: -webkit-linear-gradient(bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
-    var(--hero-image);
-    background: -o-linear-gradient(bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
-    var(--hero-image);
-    background: linear-gradient(to top, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
-    var(--hero-image);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    -webkit-filter: blur(2px);
-    filter: blur(2px);
-
-    height: var(--hero-height);
-    margin: 0 auto;
-}
-
-.hero-text {
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    color: #fffd;
-    top: 14rem;
-    transform: translate(0%,-50%);
-    text-shadow: 2px 2px 5px #000;
-}
-
-.hero-text * {
-    line-height: 2rem;
-    margin: 2rem 1.5rem;
-}
-
-.hero-text h2 {
-    text-transform: uppercase;
-    font-family: 'Verdana', sans-serif;
-}
-
-.hero-text p {
-    font-family: 'Open Sans', sans-serif;
-    margin-top: -1em;
-    font-weight: 600;
-}
+/*** Banner rules ***/
 
 .banner {
     --banner-height: 14rem;
@@ -275,131 +215,55 @@ main > header[class] {
     margin: 0 1.5rem;
 }
 
-.hero-image,
 .banner-image {
     clip-path: inset(0);
 }
 
-/*** Section rules ***/
-.section-border {
-    height: .25rem;
-    background-color: #ff6100;
-    margin: 3.125rem auto;
-    width: 75vw;
-    max-width: 45rem;
-}
-/***********
-About .section-border:
-Using the ::before and ::after pseudo-classes for the section tag doesn't seem
-to make adding a border easy without manipulating margin and padding values.
+.grid-container {
+    display: grid;
+    grid-auto-flow: row;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(var(--item-count), 1fr);
+    /* grid-auto-rows: 4.5rem; */
+    grid-gap: 1rem;
 
-Margin values as so to have it aligned to where the content begins and ends.
-Viewport width to change the border width according to viewport width, but
-stops growing at 45rem; it stays below the `section > *` max-width value, while
-not being too long or short regardless of viewport width.
-If there is no max-width, the border would reach into the margins when on a
-wide viewport.
-***********/
-
-
-/* Targets all immediate children of the section tags.
-- Content will expand as it grows from small to a max of 60rem. Wider viewport
-would create the whitespace similar to the original site.
-- Adds equal top and bottom margins within each coloured section for some nice
-uniformity, while also horizontally centring the children and keeping the
-background colour stretched to the viewport edges.
- */
-section > * {
-    margin: 1.125rem auto;
-}
-
-section h2 {
-    text-align: center;
-    /* margin-bottom: 1.5rem; */
-    font-size: 1.8rem;
-}
-
-section h4 {
-    font-size: 1.5rem;
-    text-decoration: underline;
-    text-transform: uppercase;
-}
-
-section hr {
-    margin: 2rem auto;
-    border-color: black;
-    opacity: 0.375;
-    /* ^^^ Changes the opacity of the hr lines. Set at 0.375 to maintain
-    visibility, while also sticking close to the background colours'
-    saturation levels. */
-}
-
-section p,
-section ul li,
-section ol li {
-    font-size: 1rem;
-}
-
-section li {
-    margin: 0 1rem;
-}
-
-section picture img {
-    display: block;
-    max-height: 35rem;
-    max-width: calc(100vw - 4.75rem);
-    /* Keeps images width within width of section */
-}
-
-.quote blockquote {
-    font-size: 1.375rem;
-    font-family: 'Georgia', serif;
-}
-
-.quote p {
-    text-align: right;
-    font-size: 1.3rem;
-    color: #8d2424;
-    font-weight: 700;
-}
-
-/* Targets <ul> blocks with links in their <li> tags, to give them flex rules */
-.links {
     list-style-type: none;
-
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    min-height: 100%;
     width: 100%;
-    text-align: center; /*Centres all text in the <a> tags*/
+    padding: 1rem;
 }
 
-.links li {
-    margin: 1rem;
-    text-align: center;
+.grid-item:nth-child(odd) a {
+    background: #5a5f63;
+    color: white;
 }
 
-.links a {
-    padding: 0.75rem 1.25rem;
-    margin: 0 5rem;
+.grid-item:nth-child(odd) a:hover,
+.grid-item:nth-child(odd) a:focus {
+    text-decoration: white underline;
+}
 
-    border: .25rem solid #5a5f63;
+.grid-item:nth-child(even) a {
     background: white;
     color: #5a5f63;
-    text-decoration: none;
-    font-weight: 600;
+    border: .5rem solid #5a5f63;
+}
 
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.grid-item:nth-child(even) a:hover,
+.grid-item:nth-child(even) a:focus {
+    text-decoration: #5a5f63 underline;
+}
+
+.grid-item a {
+    display: grid;
+    place-items: center;
+    text-align: center;
+    height: 100%;
+    padding: .5rem;
+}
+
+.grid-item p {
+    line-height: 1.25rem;
+    padding: .5rem .75rem;
 }
 
 /***** Footer content rules *****/
@@ -461,14 +325,6 @@ footer hr {
         line-height: 1.6rem;
     }
 
-    .hero-text * {
-        margin: 2rem 2.5rem;
-    }
-
-    .hero h2 {
-        margin: 2em 4rem;
-    }
-
     .banner {
         --banner-height: 19rem;
     }
@@ -476,6 +332,17 @@ footer hr {
     .banner-text h2 {
         font-size: 2.125rem;
         margin: 0 2.5rem;
+    }
+
+    .grid-container {
+        grid-auto-flow: column;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(var(--columns-for-items), 1fr);
+        grid-template-rows: repeat(var(--rows-for-items), 1fr);
+    }
+
+    .grid-item a {
+        padding: .5rem .75rem;
     }
 }
 
