Added width declarations for logo
Declared widths keeps the nav items from "jumping" at just when the logo loads in. Good for users on slow connections who are about to click on something and don't end up accidentally clicking on something else at the same time the logo comes in.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,6 +70,7 @@ nav {
 .logo img {
     max-height: 4rem;
     display: inline;
+    width: 9.8rem;
 }
 
 .logo img {
@@ -454,6 +455,7 @@ footer hr {
     .logo,
     .logo img {
         max-height: 5rem;
+        width: 12.35rem;
     }
 
     .menu-item a {
