Refactored styling for Projects and Reviews pages
I realised that keeping identical code in styles-grid.css would be terrible for maintainability. So, I trimmed the file down to just the styling for the banners and grids of those pages, and it will be used along styles.css.

Three total .css files are still being fetched, but the third one now won't be as large as before; normalize.css and styles.css would have already been cached if visiting those pages from any other page.

--- a/_layouts/arduino.html
+++ b/_layouts/arduino.html
@@ -28,6 +28,7 @@
         </style>
 
         <link rel="stylesheet" href="/assets/css/normalize-8.0.1.css">
+        <link rel="stylesheet" href="/assets/css/styles.css">
         <link rel="stylesheet" href="/assets/css/styles-grid.css">
     </head>
 
