--- a/_layouts/company.html
+++ b/_layouts/company.html
@@ -28,6 +28,7 @@
         </style>
 
         <link rel="stylesheet" href="/assets/css/normalize-8.0.1.css">
+        <link rel="stylesheet" href="/assets/css/styles.css">
         <link rel="stylesheet" href="/assets/css/styles-grid.css">
     </head>
 
