--- a/assets/css/styles-grid.css
+++ b/assets/css/styles-grid.css
@@ -1,235 +1,26 @@
-:root {
-    --nav-height: 5rem;
-    --main-content-width: 64rem;
-}
-
-*, *::before, *::after {
-    box-sizing: border-box;
-}
-
-body {
-    overflow-x: hidden;
-}
-
-/***** Globals *****/
-* {
-    line-height: 1.75rem;
-    font-family: 'Arial', sans-serif;
-}
-
-a {
-    text-decoration: none;
-}
-
-main a {
-    color: #00e;
-}
-
-main a:focus:not(.links a) {
-    outline: none;
-}
-
-main a:hover:not(.links a),
-main a:focus:not(.links a) {
-    text-decoration: #00e .125rem underline;
-}
-
-/***** Nav rules *****/
-nav {
-    position: fixed;
-    min-width: 100%;
-    height: calc(var(--nav-height) + .125rem);
-    /* .125rem is border width.
-    Replaces outline declaration issue that would
-    flow outside of nav. Also keeps nav content height at 4rem when border is
-    added.*/
-    background-color: white;
-
-    font-family: 'Monteserrat', sans-serif;
-    text-align: center;
-
-    z-index: 1;
-    /* Without this, the hr lines strangely would be visible in the navbar
-    because of their opacity declaration. */
-
-    border-bottom: #ff6100 .125rem solid;
-    /* Adds bottom outline to the navbar. */
-}
-
-.logo {
-    float: left;
-    margin: .5rem;
-    height: 100%;
-}
-
-.logo,
-.logo img {
-    max-height: 4rem;
-    display: inline;
-}
-
-.logo img {
-    padding: .125rem;
-}
-
-/*** Nav menu ***/
-.menu {
-    list-style-type: none;
-    margin: 0 1em;
-    height: 100%;
-
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.menu-item a {
-    --item-width: 100%;
-    display: flex;
-    padding: .125rem .875rem;
-    font-size: .875em;
-    width: var(--item-width);
-    transform: translateX(calc((100% - var(--item-width)) / 2 ));
-    line-height: 1.5rem;
-    text-decoration: none;
-    color: black;
-    font-weight: 900;
-}
-/* Navbar overflows at 1175px. Later create media query to change styling at
-1180px or somewhere wider. */
-
-.menu-item a:hover {
-	background-color: rgba(255, 97, 0, .75);
-}
-
-/* Should add a border around nav item when navigating with Tab key */
-.menu-item a:focus {
-    outline: #ff6100 .125rem solid;
-}
-
-/** Dropdown menu rules start **/
-.dropdown li:hover {
-    background: #a2a2a2;
-}
-
-nav .menu .menu-item .dropdown {
-    visibility: hidden;
-    opacity: 0;
-    position: absolute;
-    margin-top: 1rem;
-    left: 0;
-    display: none;
-    background: #e2e2e2;
-}
-
-nav .menu .menu-item:hover > .dropdown,
-nav .menu .menu-item .dropdown:hover {
-    visibility: visible;
-    opacity: 1;
-    display: block;
-}
-
-nav .menu .menu-item .dropdown li {
-    clear: both;
-    width: 100%;
-}
-
-nav ul.dropdown li.menu-item {
-    font-family: 'Monteserrat', sans-serif;
-    text-align: center;
-}
-/** Dropdown menu rules end **/
-
-/***** Main content rules *****/
-
-
-main {
-    padding: var(--nav-height) 0 0;
-    border-bottom: solid #ff6100 .125rem;
-    font-weight: bold;
-}
-
-/* Selects all children of <main> that *isn't* .banner */
-main > :not(.banner) {
-    margin: auto;
-    padding: 0 2rem;
-    max-width: var(--main-content-width);
-}
-
-main > :last-child {
-    margin-bottom: 3.125rem;
-}
-
-main > header[class] {
-    margin-top: 0;
-}
+/* This file styles just the grids and banners on the Projects and Reviews pages. It builds upon styles.css while keeping the code separate from the main stylesheet for easier maintainability. */
 
 /*** Banner rules ***/
-
 .banner {
     --banner-height: 14rem;
-    width: 100vw;
-    margin: 0 0 3.125rem;
-    min-height: var(--banner-height);
-    position: relative;
 }
 
 .banner-image {
-    background: -webkit-linear-gradient(bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
-    var(--banner-image);
-    background: -o-linear-gradient(bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
-    var(--banner-image);
-    background: linear-gradient(to top, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
-    var(--banner-image);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
     -webkit-filter: blur(2px);
     filter: blur(2px);
-
-    height: var(--banner-height);
-    margin: 0 auto;
 }
 
-.banner-text {
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    color: #fffd;
-    top: 14rem;
-    transform: translate(0%,-50%);
-    text-shadow: 2px 2px 5px #000;
-    top: 50%;
-    margin: 0 auto;
-}
-
-.banner-text h2 {
-    line-height: 2.25rem;
-    text-transform: uppercase;
-    font-family: 'Verdana', sans-serif;
-    font-size: 1.75rem;
-    margin: 0 1.5rem;
-}
-
-.banner-image {
-    clip-path: inset(0);
-}
-
+/*** Grid rules ***/
 .grid-container {
     display: grid;
     grid-auto-flow: row;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(var(--item-count), 1fr);
-    /* grid-auto-rows: 4.5rem; */
     grid-gap: 1rem;
 
     list-style-type: none;
     width: 100%;
-    padding: 1rem;
+    margin-bottom: 3.125rem !important;
 }
 
 .grid-item:nth-child(odd) a {
@@ -266,77 +57,14 @@ main > header[class] {
     padding: .5rem .75rem;
 }
 
-/***** Footer content rules *****/
-footer {
-    padding: 0 1.5rem;
-    margin: 2rem auto auto;
-    max-width: 60rem;
-    /* ^^^ These three rules bring the footer close to how the main content is
-    laid out. */
-    text-align: center;
-    background-color: white;
-    font-family: 'Lato', sans-serif;
-}
-
-footer > div {
-    margin: .5rem auto;
-}
-
-footer hr {
-    border-color: black;
-    opacity: 0.375;
-}
-
-#footer-banner {
-    font-family: 'Patua One', sans-serif;
-    font-size: 1rem;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-}
-
-#copyright {
-    float: right;
-    font-size: 1em;
-    font-family: 'Lato', sans-serif;
-    margin-bottom: 2rem;
-}
-
 /* For screens whose resolution width is 800px or greater */
 @media only screen and (min-width: 800px) {
-    :root {
-        --nav-height: 7rem;
-    }
-
-    nav {
-        height: calc(var(--nav-height) + .125rem);
-    }
-
-    .logo {
-        margin: 1rem;
-    }
-
-    .logo,
-    .logo img {
-        max-height: 5rem;
-    }
-
-    .menu-item a {
-        padding: 1.125rem .875rem;
-        line-height: 1.6rem;
-    }
-
     .banner {
         --banner-height: 19rem;
     }
 
-    .banner-text h2 {
-        font-size: 2.125rem;
-        margin: 0 2.5rem;
-    }
-
     .grid-container {
         grid-auto-flow: column;
-        grid-template-columns: repeat(3, 1fr);
         grid-template-columns: repeat(var(--columns-for-items), 1fr);
         grid-template-rows: repeat(var(--rows-for-items), 1fr);
     }
@@ -345,15 +73,3 @@ footer hr {
         padding: .5rem .75rem;
     }
 }
-
-/*
-* { background-color: rgba(255,0,0,.2); }
-* * { background-color: rgba(0,255,0,.2); }
-* * * { background-color: rgba(0,0,255,.2); }
-* * * * { background-color: rgba(255,0,255,.2); }
-* * * * * { background-color: rgba(0,255,255,.2); }
-* * * * * * { background-color: rgba(255,255,0,.2); }
-* * * * * * * { background-color: rgba(255,0,0,.2); }
-* * * * * * * * { background-color: rgba(0,255,0,.2); }
-* * * * * * * * * { background-color: rgba(0,0,255,.2); }
-*/
