--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -197,9 +197,6 @@ main > header[class] {
     background-repeat: no-repeat;
     background-size: cover;
 
-    -webkit-filter: blur(2px);
-    filter: blur(2px);
-
     height: var(--hero-height);
     margin: 0 auto;
 }
@@ -354,13 +351,14 @@ section picture img {
 
 .quote blockquote {
     font-size: 1.375rem;
-    font-family: 'Georgia', serif;
+    font-family: 'PT Sans', sans-serif;
+    font-style: italic;
 }
 
 .quote p {
     text-align: right;
     font-size: 1.3rem;
-    color: #8d2424;
+    color: #841b00;
     font-weight: 700;
 }
 
