--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -197,6 +197,9 @@ main > header[class] {
     background-repeat: no-repeat;
     background-size: cover;
 
+    -webkit-filter: blur(2px);
+    filter: blur(2px);
+
     height: var(--hero-height);
     margin: 0 auto;
 }
@@ -217,12 +220,14 @@ main > header[class] {
 
 .hero-text h2 {
     font-family: 'Verdana', sans-serif;
+    font-size: 35px;
 }
 
 .hero-text p {
     font-family: 'Open Sans', sans-serif;
-    margin-top: -1em;
+    margin-top: -2em;
     font-weight: 600;
+    font-size: 20px;
 }
 
 .banner {
