--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -208,26 +208,43 @@ main > header[class] {
     position: absolute;
     width: 100%;
     text-align: center;
-    color: #fffd;
-    top: 14rem;
+    color: #ffff;
     transform: translate(0%,-50%);
 }
 
 .hero-text * {
     line-height: 2rem;
-    margin: 2rem 1.5rem;
 }
 
 .hero-text h2 {
     font-family: 'Verdana', sans-serif;
-    font-size: 35px;
+    font-size: 40px;
+    position: relative;
+    bottom: 430px;
 }
 
-.hero-text p {
+.subtitle {
     font-family: 'Open Sans', sans-serif;
-    margin-top: -2em;
     font-weight: 600;
     font-size: 20px;
+    position: relative;
+    bottom: 490px;
+}
+
+.hero-text blockquote {
+    font-size: 1.5rem;
+    font-family: 'Open Sans', sans-serif;
+    font-style: italic;
+    position: relative;
+    bottom: 210px;
+}
+
+.quote-text {
+    font-size: 1.3rem;
+    font-family: 'Open Sans', sans-serif;
+    position: relative;
+    left: 200px;
+    top: 235px;
 }
 
 .banner {
@@ -350,19 +367,6 @@ section picture img {
     max-height: 35rem;
     max-width: calc(100vw - 4.75rem);
     /* Keeps images width within width of section */
-}
-
-.quote blockquote {
-    font-size: 1.375rem;
-    font-family: 'PT Sans', sans-serif;
-    font-style: italic;
-}
-
-.quote p {
-    text-align: right;
-    font-size: 1.3rem;
-    color: #841b00;
-    font-weight: 700;
 }
 
 /* Targets <ul> blocks with links in their <li> tags, to give them flex rules */
