--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -266,11 +266,29 @@ main > header[class] {
     background-repeat: no-repeat;
     background-size: cover;
 
-    -webkit-filter: blur(4px);
-    filter: blur(4px);
+    -webkit-filter: blur(1px);
+    filter: blur(1px);
 
     height: var(--banner-height);
     margin: 0 auto;
+}
+
+.product-reviews-banner-image {
+  background: -webkit-linear-gradient(bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
+  var(--banner-image);
+  background: -o-linear-gradient(bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
+  var(--banner-image);
+  background: linear-gradient(to top, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
+  var(--banner-image);
+  background-position: 50% 40%;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  -webkit-filter: blur(1px);
+  filter: blur(1px);
+
+  height: var(--banner-height);
+  margin: 0 auto;
 }
 
 .banner-text {
