--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,8 @@ a {
 }
 
 main a {
-    color: #00e;
+    color: #4e4e4e;
+    text-decoration: underline;
 }
 
 main a:focus:not(.links a) {
@@ -162,6 +163,7 @@ main > :not(.hero):not(.banner):not(.section-border) {
     margin: 1.125rem auto;
     padding: 0 2rem;
     max-width: var(--main-content-width);
+    color: #4e4e4e;
 }
 
 main > :first-child {
@@ -369,12 +371,12 @@ section h2 {
     text-align: center;
     /* margin-bottom: 1.5rem; */
     font-size: 1.8rem;
+    color: black;
 }
 
 section h4 {
     font-size: 1.5rem;
     text-decoration: underline;
-    text-transform: uppercase;
 }
 
 section hr {
