- Made the corners of the buttons on the home page rounded. - Added a hover feature so the colors switch on the inside of the buttons when hovering. - Added a focus feature to the buttons so when it is clicked, the border of the button darkens. - Made some minor changes to the text on the home page.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -435,6 +435,7 @@ section picture img {
     color: #5a5f63;
     text-decoration: none;
     font-weight: 600;
+    border-radius: 1.3rem;
 
     display: -webkit-box;
     display: -ms-flexbox;
@@ -442,6 +443,15 @@ section picture img {
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+.links a:hover {
+  background: #5a5f63;
+  color: white;
+}
+
+.links a:focus{
+  border: .25rem solid #343638;
 }
 
 /***** Footer content rules *****/
