--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -108,12 +108,11 @@ nav {
 1180px or somewhere wider. */
 
 .menu-item a:hover {
-	background-color: rgba(255, 97, 0, .75);
+	border-bottom: 4px solid #ff6100;;
 }
 
-/* Should add a border around nav item when navigating with Tab key */
 .menu-item a:focus {
-    outline: #ff6100 .125rem solid;
+    border-bottom: 4px solid #f1813a;
 }
 
 /** Dropdown menu rules start **/
