--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -371,7 +371,6 @@ section h2 {
 
 section h4 {
     font-size: 1.5rem;
-    text-decoration: underline;
 }
 
 section hr {
@@ -474,7 +473,7 @@ footer hr {
 }
 
 #copyright {
-    float: right;
+    float: left;
     font-size: 1em;
     font-family: 'Lato', sans-serif;
     margin-bottom: 2rem;
