--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -15,9 +15,11 @@
             }
             /* Styling here to build upon normalize.css, and not undo normalize.css's margin declaration for h1. */
         </style>
+        <link rel="stylesheet" href="/assets/css/normalize-8.0.1.css">
+        <link rel="stylesheet" href="/assets/css/styles.css">
         <link rel="stylesheet" href="https://toert.github.io/Isolated-Bootstrap/versions/4.0.0-beta/iso_bootstrap4.0.0min.css">
     </head>
-  
+
     <body>
         <main>
             {{ content }}
